--- a/about.html
+++ b/about.html
@@ -300,7 +300,7 @@
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const whatsappLink = `https://wa.me/9502772777?text=${encodedMessage}`;
+                        const whatsappLink = `https://wa.me/+919502772777?text=${encodedMessage}`;
                         window.location.href = whatsappLink;
                     }
                 </script>
