--- a/service.html
+++ b/service.html
@@ -81,7 +81,7 @@
                 <script>
                 function sendWhatsAppMessage() {
                   const message = "Hello, I request a call back and want to know more about Joymercy logistics and its services";
-                  const url = "https://api.whatsapp.com/send?phone=9502772777&text=" + encodeURIComponent(message);
+                  const url = "https://api.whatsapp.com/send?phone=+919502772777&text=" + encodeURIComponent(message);
                   window.open(url, '_blank');
 
                 }
@@ -219,7 +219,7 @@
                             function sendWhatsAppMessage() {
                               const name = document.getElementById('name-input').value;
                               const message = "Hello, I'm " + name + ", I request a call back and want to know more about Joymercy logistics and its services";
-                              const url = "https://api.whatsapp.com/send?phone=9502772777&text=" + encodeURIComponent(message);
+                              const url = "https://api.whatsapp.com/send?phone=+919502772777&text=" + encodeURIComponent(message);
                               window.open(url, '_blank');
                             }
                           </script>
