--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <script>
                 function sendWhatsAppMessage() {
                   const message = "Hello, I request a call back and want to know more about Joymercy logistics and its services";
-                  const url = "https://api.whatsapp.com/send?phone=+919502772777&text=" + encodeURIComponent(message);
+                  const url = "https://wa.me/+919502772777?text=" + encodeURIComponent(message);
                   window.open(url, '_blank');
 
                 }
@@ -117,7 +117,6 @@
                 <div class="col-lg-5 pb-4 pb-lg-0">
                     <img class="img-fluid w-100" src="img/about.jpg" alt="">
                     <div class="bg-primary text-dark text-center p-4">
-                        <h3 class="m-0">25+ Years Experience</h3>
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -234,7 +233,7 @@
                             function sendWhatsAppMessage() {
                                 const name = document.getElementById('name-input').value;
                                 const message = "Hello, I'm " + name + ", I request a call back and want to know more about Joymercy logistics and its services";
-                                const url = "https://api.whatsapp.com/send?phone=+919502772777&text=" + encodeURIComponent(message);
+                                const url = "https://wa.me/+919502772777?text=" + encodeURIComponent(message);
                                 window.open(url, '_blank');
                             }
                         </script>
