--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
                             function sendCallBackMessage() {
                                 const name = document.getElementById('name-input').value;
                                 const message = "Hello, I'm " + name + ", I request a call back and want to know more about Joymercy logistics and its services";
-                                const url = "https://wa.me/+919502772777?text=" + encodeURIComponent(message);
+                                const encodedText = encodeURIComponent(message);
+                                const mobile = +919502772777
+                      const num = mobile.toString()
+                      const url = `https://wa.me/${num}?text=${encodedText}`;
                                 window.open(url, '_blank');
                             }
                         </script>
@@ -554,8 +557,10 @@
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const whatsappLink = `https://wa.me/9502772777?text=${encodedMessage}`;
-                        window.location.href = whatsappLink;
+                        const mobile = +919502772777
+                      const num = mobile.toString()
+                      const url = `https://wa.me/${num}?text=${encodedMessage}`;
+                      window.open(url, '_blank');
                     }
                 </script>
 
