--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
                 <script>
                 function sendWhatsAppMessage() {
                   const message = "Hello, I request a call back and want to know more about Joymercy logistics and its services";
-                  const url = "https://api.whatsapp.com/send?phone=+919502772777&text=" + encodeURIComponent(message);
+                  const url = "https://wa.me/+919502772777?text=" + encodeURIComponent(message);
                   window.open(url, '_blank');
 
                 }
@@ -148,7 +148,7 @@
                           <p class="help-block text-danger"></p>
                         </div>
                         <div>
-                          <button class="btn btn-primary py-3 px-4" type="button" id="sendMessageButton" onclick="sendWhatsapp()">Send
+                          <button class="btn btn-primary py-3 px-4" type="button" id="sendMessageButton" onclick="sendContactMessage()">Send
                             Message</button>
                         </div>
                       </form>
@@ -156,14 +156,16 @@
                   </div>
                   
                   <script>
-                    function sendWhatsapp() {
+                    function sendContactMessage() {
                       const name = document.getElementById("name").value;
                       const email = document.getElementById("email").value;
                       const subject = document.getElementById("subject").value;
                       const message = document.getElementById("message").value;
+                      const mobile = +919502772777
+                      const num = mobile.toString()
                       const text = `Hi, my name is ${name}. My email address is ${email}. I have a question regarding ${subject}. ${message}`;
                       const encodedText = encodeURIComponent(text);
-                      const url = `https://wa.me/9502772777?text=${encodedText}`;
+                      const url = `https://wa.me/${num}?text=${encodedText}`;
                       window.open(url, '_blank');
                     }
                   </script>
@@ -217,18 +219,20 @@
                         <input type="tel" class="form-control border-light" style="padding: 30px;"
                             placeholder="Your Phone Number">
                         <div class="input-group-append">
-                            <button class="btn btn-primary px-4" onclick="sendWhatsAppMessage()">Send</button>
+                            <button class="btn btn-primary px-4" onclick="sendContactMessage()">Send</button>
                         </div>
                     </div>
                 </div>
 
                 <script>
-                    function sendWhatsAppMessage() {
+                    function sendContactMessage() {
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const whatsappLink = `https://wa.me/9502772777?text=${encodedMessage}`;
-                        window.location.href = whatsappLink;
+                        const mobile = +919502772777
+                      const num = mobile.toString()
+                      const url = `https://wa.me/${num}?text=${encodedMessage}`;
+                      window.open(url, '_blank');
                     }
                 </script>
 
