--- a/blog.html
+++ b/blog.html
@@ -64,7 +64,7 @@
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
             <a href="index.html" class="navbar-brand ml-lg-3">
-                <h1 class="m-0 display-5 text-uppercase text-primary"><i class="fa fa-truck mr-2"></i>JoyMercy</h1>
+                <h1 class="m-0 display-5 text-uppercase text-primary"><img src="img/jmlogo.png" style="height: 60px; width: auto;"class="mr-2">JoyMercy</h1>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
