--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="d-inline-flex align-items-center text-white">
                     <small><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -455,7 +455,7 @@
                             Kukatpally Hyderabad
                             Telangana 500085</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p>
-                        <p><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</p>
+                        <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
