--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -261,8 +261,8 @@
                             HMT hills opp jntu
                             Kukatpally Hyderabad
                             Telangana 500085</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</p> 
-                        <p><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p> 
+                        <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -299,7 +299,7 @@
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const whatsappLink = `https://wa.me/+919502772777?text=${encodedMessage}`;
+                        const whatsappLink = `https://wa.me/+919676927777?text=${encodedMessage}`;
                         window.location.href = whatsappLink;
                     }
                 </script>
