--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                 <div class="col-lg-7">
                     <h6 class="text-primary text-uppercase font-weight-bold">About Us</h6>
                     <h1 class="mb-4">Trusted Logistic Service Provider</h1>
-                    <p class="mb-4">At Joymecy Logistics, we are passionate about logistics. We believe that by providing top-quality transportation and logistics services, we can help businesses around the world thrive. Our team has years of combined experience in the industry, and we are committed to staying at the forefront of technological and logistical advancements to ensure that our clients receive the best service possible.</p>
+                    <p class="mb-4">At Joymercy Logistics, we are passionate about logistics. We believe that by providing top-quality transportation and logistics services, we can help businesses around the world thrive. Our team has years of combined experience in the industry, and we are committed to staying at the forefront of technological and logistical advancements to ensure that our clients receive the best service possible.</p>
                     <!-- <div class="d-flex align-items-center pt-2">
                         <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
@@ -150,7 +150,7 @@
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
                     <h1 class="mb-4">Safe & Reliable Services</h1>
-                    <p class="mb-4">Choosing Joymecy Logistics as your logistics partner can bring several benefits to your business. Here are some reasons why you should choose us </p>
+                    <p class="mb-4">Choosing Joymercy Logistics as your logistics partner can bring several benefits to your business. Here are some reasons why you should choose us </p>
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Reliability</h6>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Emergency Services</h6></li>
