--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -148,7 +148,7 @@
                 <div class="col-lg-7 py-5 py-lg-0">
                     <h6 class="text-primary text-uppercase font-weight-bold">Why Choose Us</h6>
                     <h1 class="mb-4">Safe & Reliable Services</h1>
-                    <p class="mb-4">Choosing Joymecy Logistics as your logistics partner can bring several benefits to your business. Here are some reasons why you should choose us </p>
+                    <p class="mb-4">Choosing Joymercy Logistics as your logistics partner can bring several benefits to your business. Here are some reasons why you should choose us </p>
                     <ul class="list-inline">
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Reliability</h6>
                         <li><h6><i class="far fa-dot-circle text-primary mr-3"></i>Emergency Services</h6></li>
@@ -259,8 +259,8 @@
                             HMT hills opp jntu
                             Kukatpally Hyderabad
                             Telangana 500085</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</p> 
-                        <p><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p> 
+                        <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -297,7 +297,7 @@
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const mobile = +919502772777
+                        const mobile = +919676927777
                       const num = mobile.toString()
                       const url = `https://wa.me/${num}?text=${encodedMessage}`;
                       window.open(url, '_blank');
