--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center text-white">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -81,7 +81,7 @@
                 <script>
                 function sendWhatsAppMessage() {
                   const message = "Hello, I request a call back and want to know more about Joymercy logistics and its services";
-                  const url = "https://wa.me/+919502772777?text=" + encodeURIComponent(message);
+                  const url = "https://wa.me/+919676927777?text=" + encodeURIComponent(message);
                   window.open(url, '_blank');
 
                 }
@@ -161,7 +161,7 @@
                       const email = document.getElementById("email").value;
                       const subject = document.getElementById("subject").value;
                       const message = document.getElementById("message").value;
-                      const mobile = +919502772777
+                      const mobile = +919676927777
                       const num = mobile.toString()
                       const text = `Hi, my name is ${name}. My email address is ${email}. I have a question regarding ${subject}. ${message}`;
                       const encodedText = encodeURIComponent(text);
@@ -187,8 +187,8 @@
                             HMT hills opp jntu
                             Kukatpally Hyderabad
                             Telangana 500085</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9502772777</p>
-                        <p><i class="fa fa-envelope mr-2"></i>joymercylogistics@gmail.com</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+91 9676927777</p>
+                        <p><i class="fa fa-envelope mr-2"></i>info@joymercylogistics.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social mr-2" href="#"><i
@@ -229,7 +229,7 @@
                         const phoneNumber = document.querySelector('input[type="tel"]').value;
                         const message = `Hi, I'm interested in your services. Please contact me at this number: ${phoneNumber}`;
                         const encodedMessage = encodeURIComponent(message);
-                        const mobile = +919502772777
+                        const mobile = +919676927777
                       const num = mobile.toString()
                       const url = `https://wa.me/${num}?text=${encodedMessage}`;
                       window.open(url, '_blank');
