--- a/single.html
+++ b/single.html
@@ -47,7 +47,7 @@
                     <a class="text-white px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="text-white px-2" href="joymercylogistics">
+                    <a class="text-white px-2" href="https://instagram.com/joymercylogistics?igshid=ZDdkNTZiNTM=">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a class="text-white pl-2" href="">
