--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-1.jpg" alt="">
+                        <img class="card-img-top" src="Prasad.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
                                 <h5 class="font-weight-bold">Full Name</h5>
