--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                         <img class="card-img-top" src="Prasad.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">Prasad</h5>
+                                <span>Chairman and Managing Director and Promoter</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
