--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         <img class="card-img-top" src="Prasad.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">PRASAD</h5>
+                                <h5 class="font-weight-bold">PRASAD G</h5>
                                 <span>Chairman and Managing Director and Promoter</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
@@ -369,11 +369,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-2.jpg" alt="">
+                        <img class="card-img-top" src="Naveen.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">NAVEEN A</h5>
+                                <span>Managing Director and Promoter</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
