--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-3.jpg" alt="">
+                        <img class="card-img-top" src="Prakash.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">PRAKASH G</h5>
+                                <span>INDEPENDENT DIRECTOR</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
@@ -409,11 +409,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team card position-relative overflow-hidden border-0 mb-5">
-                        <img class="card-img-top" src="img/team-4.jpg" alt="">
+                        <img class="card-img-top" src="Rajesh.jpg" alt="">
                         <div class="card-body text-center p-0">
                             <div class="team-text d-flex flex-column justify-content-center bg-secondary">
-                                <h5 class="font-weight-bold">Full Name</h5>
-                                <span>Designation</span>
+                                <h5 class="font-weight-bold">RAJESH K</h5>
+                                <span>INDEPENDENT DIRECTOR</span>
                             </div>
                             <div class="team-social d-flex align-items-center justify-content-center bg-primary">
                                 <a class="btn btn-outline-dark btn-social mr-2" href="#"><i
