--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="text-center pb-2">
-                <h6 class="text-primary text-uppercase font-weight-bold">Delivery Team</h6>
-                <h1 class="mb-4">Meet Our Delivery Team</h1>
+                <h6 class="text-primary text-uppercase font-weight-bold"></h6>
+                <h1 class="mb-4">Meet Our Team</h1>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6">
