--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <a class="text-white px-2" href="">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-white px-2" href="">
+                <!--    <a class="text-white px-2" href="">
                         <i class="fab fa-twitter"></i>
-                    </a>
+                    </a> -->
                     <a class="text-white px-2" href="">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
